# V2AM_ECE228_codebase

./: .gitignore  README.md  pyproject.toml
0_data_preparation/: README.md  add_actions_to_parquets.py  prepare_action_head_dataset.py  prepare_video_model_dataset.py
1_video_finetuning/: README.md  config.yaml  dataset.py  eval_i2v.py  inference_lora.py  lora_utils.py  mimicgen_dataset.py  run_episode_inference.py  run_inference.sh  run_mimicgen_inference.py  run_train.sh  train_lora.py
2_action_head_training/: README.md  cache_hummingbird_latents.py  evaluate_i2v.py  finetune_on_i2v.py  test_dataloader.py  train_ablation_sweep.sh  train_ablation_sweep_extended.sh  train_flow_matching_head.py
3_ablation_eval/: README.md  batch_ablation_eval.sh  batch_ablation_eval_extended.sh  evaluate_in_sim.py  generate_full_report.py  run_ablation_eval.py  run_closedloop_eval.py  run_ensemble_sweep_eval.py  run_sim_eval_batch.py
4_visualization/: README.md  visualize_stack_rollout.py  visualize_video_rollout.py
docs/: SETUP.md
src/: config.py  mimicgen_dataset.py  utils.py  videomae_encoder.py
src/flow_matching/: config.py  evaluate.py  hummingbird_policy.py  model.py  train.py
