[project]
name = "v2am"
version = "0.1.0"
description = "V2AM: physics-informed flow-matching action model with video-model conditioning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "huggingface-hub>=1.4.1",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pyarrow>=23.0.1",
    "robosuite==1.4.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "umap-learn>=0.5.11",
    "wandb>=0.21.1",
    "nvitop",
    "torchvision>=0.25.0",
    "einops>=0.8.2",
    "omegaconf>=2.3.0",
    "peft>=0.18.1",
    "accelerate>=1.13.0",
    "pytorch-lightning>=2.6.1",
    "diffusers>=0.37.0",
    "open-clip-torch==2.24.0",
    "decord>=0.6.0",
    "safetensors>=0.7.0",
    "timm>=1.0.25",
    "fairscale>=0.4.13",
    "pillow>=12.1.1",
    "ftfy>=6.3.1",
    "sentencepiece>=0.2.1",
    "protobuf==3.20.3",
    "kornia>=0.8.2",
]
